package org.ken22.players;

public class Input2 {
    private double vx;
    private double vy;

    public Input2(double vx, double vy) {
        this.vx = vx;
        this.vy = vy;
    }

    public double vx() {
        return vx;
    }

    public double vy() {
        return vy;
    }
}
